# AskVault-2.0

./: README.md  package.json  pnpm-lock.yaml
app/: page.tsx
app/api/chat/: route.ts
app/api/delete/: route.ts
app/api/form/: route.ts
app/api/ingest/: route.ts
app/api/voice/: route.ts
app/api/voice/process/: route.ts
app/api/voice/process/poll/: route.ts
app/api/voice/status/: route.ts
app/chat/: page.tsx
app/components/: ChatHeader.tsx  ChatInput.tsx  ChatMessages.tsx  ChatPopup.tsx  ChatWidget.tsx  LoadingIndicator.tsx  MessageItem.tsx  Navigation.tsx
app/upload/: page.tsx
lib/: db.ts  tools.ts
lib/config/: prompts.ts
lib/mail/: sendMail.ts
lib/services/: embedding-service.ts  output.json  qdrant-client.ts  rag-service.ts  unstructured.ts
lib/utils/: document-parser.ts
lib/voice/: redisSessionMemory.ts
prisma/: schema.prisma
public/: campbell.txt  chatbot.txt  finder.txt
types/: index.ts
whisper/: main.py  pyproject.toml
