[project]
name = "whisper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.0",
    "faster-whisper>=1.2.1",
    "numpy>=2.4.0",
    "python-multipart>=0.0.21",
    "soundfile>=0.13.1",
    "uvicorn>=0.40.0",
]
